--- a/style/food.css
+++ b/style/food.css
@@ -15,3 +15,6 @@ ul li {
     justify-content: center;
     margin-left: 40px;
 }
+body {
+    background-image: url(style/images/download.jfif);
+}
